--- a/locations.css
+++ b/locations.css
@@ -8,7 +8,7 @@ body{
     font-family: "Arial";
 }
 .parallax {
-    background-image: url("ham.jpg");
+    background-image: url("jonathan-nguyen-XwO0raJ2dQM-unsplash.jpg");
     height: 85%;
     object-fit: cover;
     background-attachment: fixed;
@@ -36,23 +36,16 @@ a{
     position: relative;
     margin: 80px;
 }
-.slogan{
-    position: relative;
-    top: 42.5px;
-    left: auto;
-    color: #DBDBDC;
-}
 img {
     width: 100px;
     margin-top: 1px;
     left: auto;
 }
-
-.expando{
-    display: none;
-}
-.expando:target{
-    display: block;
+.slogan{
+    position: relative;
+    top: 42.5px;
+    left: auto;
+    color: #DBDBDC;
 }
 footer{
     background-color: #8C9E9B;
@@ -65,12 +58,4 @@ footer{
     left: auto;
     font-size: 35px;
     color: #DBDBDC;
-}
-h3{
-    position: relative;
-    left: auto;
-}
-.logo{
-    position: relative;
-    left: auto;
 }
