--- a/locations.css
+++ b/locations.css
@@ -59,3 +59,33 @@ footer{
     font-size: 35px;
     color: #DBDBDC;
 }
+*{
+    box-sizing: border-box;
+}
+.column {
+    float: left;
+    width: 50%;
+    padding: 0 10px;
+}
+.row{
+    margin: 0 -5px;
+}
+.row:after{
+    content: "";
+    display: table;
+    clear: both;
+}
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    text-align: center;
+    background-color: #FFFFFF;
+    margin-right: 20px;
+}
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+    }
+}
