--- a/careers.css
+++ b/careers.css
@@ -4,8 +4,7 @@ html, body{
 body{
     width: 100%;
     background-color: #DBDBDC;
-    text-align: center;
-    font-family: "Arial";
+    font-family: 'Cardo', serif;
 }
 .parallax {
     background-image: url("good.jpg");
@@ -25,9 +24,6 @@ nav{
 }
 nav a{
     color: #DBDBDC;
-}
-a{
-    color: #000000;
     font-size: 15px;
     letter-spacing: 0.12em;
     border: none;
@@ -36,26 +32,123 @@ a{
     position: relative;
     margin: 80px;
 }
+
+
 img {
     width: 100px;
     margin-top: 1px;
     left: auto;
 }
 .slogan{
-    position: relative;
-    top: 42.5px;
-    left: auto;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     color: #DBDBDC;
+}
+.announcement{
+    text-align: center;
+}
+form{
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    width: 60%;
+    margin: 0 auto;
+    padding-bottom: 20px;
+}
+label, input{
+    display: inline-block;
+
+}
+label {
+    width: 30%;
+    text-align: right;
+}
+
+label + input{
+    width: 30%;
+    margin: 0 30% 0 4%;
+}
+input + input{
+    float: right;
+}
+
+.info{
+    padding-top: 30px;
+}
+.schedule{
+    padding-bottom: 20px;
+}
+.about{
+    text-align: center;
+    padding-bottom: 10px;
+}
+.work{
+    text-align: center;
+    padding-bottom: 10px;
+}
+.title{
+    text-align: center;
+    padding-bottom: 10px;
+}
+textarea {
+    width: 30%;
+    margin: 0 30% 0 4%;
+    line-height: 2 ;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.5);
+}
+select{
+    width: 30%;
+    margin: 0 30% 0 4%;
+    line-height: 1.5;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 1px #999;
+}
+.spaceBetween{
+    padding: 20px;
+}
+button{
+    display: block;
+    width: 15%;
+    margin: auto;
+    color: #FFFFFF;
+    background-color: #3B88FD;
+    border-color: #3B88FD;
+    border-radius: 5px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.5);
+}
+.emptySpace{
+    padding: 20px;
+}
+.preFooter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+    width: 100%;
+    height: 50px;
+    background-color: #c5c6c6;
 }
 footer{
     background-color: #8C9E9B;
     width: 100%;
     height: 150px;
 }
-.icon{
+.facebook{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.facebook a{
     position: relative;
     top: 50px;
-    left: auto;
+    margin: 5px;
     font-size: 35px;
     color: #DBDBDC;
 }
+
