--- a/home.css
+++ b/home.css
@@ -1,14 +1,13 @@
 html, body{
     height: 100%;
 }
-body{
+body {
     width: 100%;
     background-color: #DBDBDC;
-    text-align: center;
     font-family: 'Cardo', serif;
 }
 .parallax {
-    background-image: url("ham.jpg");
+    background-image: url("burger-hero.jpg");
     height: 85%;
     object-fit: cover;
     background-attachment: fixed;
@@ -16,27 +15,8 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
-nav{
-    display: flex;
-    width: 100%;
-    height: 20%;
-    align-items: center;
-    justify-content: center;
-}
-nav a{
-    color: #DBDBDC;
-}
-a{
-    color: #000000;
-    font-size: 15px;
-    letter-spacing: 0.12em;
-    border: none;
-    text-decoration: none;
-    display: inline-block;
-    position: relative;
-    margin: 80px;
-}
 .slogan{
+    text-align: center;
     margin: 0;
     position: absolute;
     top: 50%;
@@ -45,12 +25,67 @@ a{
     transform: translate(-50%, -50%);
     color: #DBDBDC;
 }
+.container {
+    height: 100%;
+    background-size: cover;
+}
+nav{
+    display: flex;
+    width: 100%;
+    height: 20%;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+a{
+    color: #DBDBDC;
+    font-size: 15px;
+    letter-spacing: 0.12em;
+    border: none;
+    text-decoration: none;
+    display: inline-block;
+    position: relative;
+    margin: 80px;
+}
+
+
 img {
     width: 100px;
     margin-top: 1px;
     left: auto;
 }
+.faq{
+    color: #000000;
+}
 
+article{
+    font-size: 20px;
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.wrapImage{
+    width: 450px;
+    float: left;
+    padding-right: 25px;
+    padding-bottom: 10px;
+}
+.wrapImage img {
+    width: 100%;
+}
+.video{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    padding-bottom: 50px;
+}
+.faq{
+    font-size: 15px;
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .expando{
     display: none;
 }
@@ -82,19 +117,4 @@ footer{
     margin: 5px;
     font-size: 35px;
     color: #DBDBDC;
-}
-.icon{
-    position: relative;
-    top: 50px;
-    left: auto;
-    font-size: 35px;
-    color: #DBDBDC;
-}
-h3{
-    position: relative;
-    left: auto;
-}
-.logo{
-    position: relative;
-    left: auto;
 }
